unpackaged/main/default/objects/Brightcove_Account__c/fields/Last_Subscription_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscription_Change__c</fullName>
    <label>Last Subscription Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Downgraded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Downgraded (mid-term)</fullName>
            </value>
            <value>
                <fullName>Downgraded (at renewal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>