unpackaged/main/default/objects/Brightcove_Account__c/fields/Last_User_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Login_Date__c</fullName>
    <label>Last User Login Date</label>
    <type>Date</type>
</CustomField>