unpackaged/main/default/objects/Brightcove_Account__c/fields/Last_Video_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Video_Upload_Date__c</fullName>
    <label>Last Video Upload Date</label>
    <type>Date</type>
</CustomField>