unpackaged/main/default/objects/Brightcove_Account__c/fields/Live_Module_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Live_Module_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Module Enabled</label>
    <type>Checkbox</type>
</CustomField>