unpackaged/main/default/objects/Brightcove_Account__c/fields/Live_Module_Status__c.field-meta.xml
<CustomField>
    <fullName>Live_Module_Status__c</fullName>
    <label>Live Module Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Trial Expired</fullName>
            </value>
            <value>
                <fullName>Paying</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>