unpackaged/main/default/objects/Brightcove_Account__c/fields/MAP_Connection__c.field-meta.xml
<CustomField>
    <fullName>MAP_Connection__c</fullName>
    <label>MAP Connection</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>