unpackaged/main/default/objects/Brightcove_Account__c/fields/Marketing_Studio_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Studio_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Studio Enabled</label>
    <type>Checkbox</type>
</CustomField>