unpackaged/main/default/objects/Brightcove_Account__c/fields/Max_Users__c.field-meta.xml
<CustomField>
    <fullName>Max_Users__c</fullName>
    <label>Max Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>