unpackaged/main/default/objects/Brightcove_Account__c/fields/Max_Video_allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Video_allowed__c</fullName>
    <label>Max Video allowed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>