unpackaged/main/default/objects/Brightcove_Account__c/fields/Media_API__c.field-meta.xml
<CustomField>
    <fullName>Media_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media API</label>
    <type>Checkbox</type>
</CustomField>