unpackaged/main/default/objects/Brightcove_Account__c/fields/Media_Manager__c.field-meta.xml
<CustomField>
    <fullName>Media_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Manager</label>
    <type>Checkbox</type>
</CustomField>