unpackaged/main/default/objects/Brightcove_Account__c/fields/Media_Vision_Lead_Report__c.field-meta.xml
<CustomField>
    <fullName>Media_Vision_Lead_Report__c</fullName>
    <label>Media Vision Lead Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Partner Program</fullName>
            </value>
            <value>
                <fullName>Misc. Marketing</fullName>
            </value>
            <value>
                <fullName>Media Buys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>