unpackaged/main/default/objects/Brightcove_Account__c/fields/MTD_Total_GB__c.field-meta.xml
<CustomField>
    <fullName>MTD_Total_GB__c</fullName>
    <label>MTD Total GB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>