unpackaged/main/default/objects/Brightcove_Account__c/fields/MTD_Total_GB_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>MTD_Total_GB_Last_Updated__c</fullName>
    <label>MTD Total GB - Last Updated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>