unpackaged/main/default/objects/Brightcove_Account__c/fields/Network_AdPolicy__c.field-meta.xml
<CustomField>
    <fullName>Network_AdPolicy__c</fullName>
    <label>Network AdPolicy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>