unpackaged/main/default/objects/Brightcove_Account__c/fields/Network_AdTier__c.field-meta.xml
<CustomField>
    <fullName>Network_AdTier__c</fullName>
    <label>Network AdTier</label>
    <length>128</length>
    <type>Text</type>
</CustomField>