unpackaged/main/default/objects/Brightcove_Account__c/fields/Newest_Change_Number__c.field-meta.xml
<CustomField>
    <fullName>Newest_Change_Number__c</fullName>
    <label>Newest Change Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>