unpackaged/main/default/objects/Brightcove_Account__c/fields/Num_Map_Connections__c.field-meta.xml
<CustomField>
    <fullName>Num_Map_Connections__c</fullName>
    <label>Num Map Connections</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>