unpackaged/main/default/objects/Brightcove_Account__c/fields/OoBacklotID__c.field-meta.xml
<CustomField>
    <fullName>OoBacklotID__c</fullName>
    <label>OoBacklotID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>