unpackaged/main/default/objects/Brightcove_Account__c/fields/OoBYOCDN__c.field-meta.xml
<CustomField>
    <fullName>OoBYOCDN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OoBYOCDN</label>
    <type>Checkbox</type>
</CustomField>