unpackaged/main/default/objects/Brightcove_Account__c/fields/Partner_Referral__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Referral</label>
    <type>Checkbox</type>
</CustomField>