unpackaged/main/default/objects/Brightcove_Account__c/fields/Partner_Referral_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Account_ID__c</fullName>
    <label>Partner Referral Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>