unpackaged/main/default/objects/Brightcove_Account__c/fields/PayingAccount__c.field-meta.xml
<CustomField>
    <fullName>PayingAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayingAccount</label>
    <type>Checkbox</type>
</CustomField>