unpackaged/main/default/objects/Brightcove_Account__c/fields/Pre_EOL_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pre_EOL_Tier__c</fullName>
    <label>Pre EOL Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>