unpackaged/main/default/objects/Brightcove_Account__c/fields/Previous_Month_Bandwidth_GB__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Bandwidth_GB__c</fullName>
    <label>Previous Month Bandwidth (GB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>