unpackaged/main/default/objects/Brightcove_Account__c/fields/Previous_Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Ending__c</fullName>
    <label>Previous Month Ending</label>
    <type>Date</type>
</CustomField>