unpackaged/main/default/objects/Brightcove_Account__c/fields/Previous_Month_s_Total_GB__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_s_Total_GB__c</fullName>
    <label>Previous Month&#39;s Total GB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>