unpackaged/main/default/objects/Brightcove_Account__c/fields/Previous_Month_Stream_Starts__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Stream_Starts__c</fullName>
    <label>Previous Month Stream Starts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>