unpackaged/main/default/objects/Brightcove_Account__c/fields/Primary_acct_owner_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_acct_owner_email__c</fullName>
    <label>Primary acct owner email</label>
    <type>Email</type>
</CustomField>