unpackaged/main/default/objects/Brightcove_Account__c/fields/Pro_Bono_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pro_Bono_Reason__c</fullName>
    <label>Pro-Bono Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barter</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>