unpackaged/main/default/objects/Brightcove_Account__c/fields/Projected_Bandwidth_GB_month__c.field-meta.xml
<CustomField>
    <fullName>Projected_Bandwidth_GB_month__c</fullName>
    <label>Projected Bandwidth (GB) - month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>