unpackaged/main/default/objects/Brightcove_Account__c/fields/Projected_Stream_Starts_month__c.field-meta.xml
<CustomField>
    <fullName>Projected_Stream_Starts_month__c</fullName>
    <label>Projected Stream Starts - month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>