unpackaged/main/default/objects/Brightcove_Account__c/fields/PublishedAppCount__c.field-meta.xml
<CustomField>
    <fullName>PublishedAppCount__c</fullName>
    <label>PublishedAppCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>