unpackaged/main/default/objects/Brightcove_Account__c/fields/Publisher_Status__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Status__c</fullName>
    <description>Current status of the publisher&#39;s account.</description>
    <inlineHelpText>Current status of the publisher&#39;s account. Updated via sync from origin-services account.</inlineHelpText>
    <label>Publisher Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>UNREQUESTED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>ENROLLED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>LOCKED</fullName>
            </value>
            <value>
                <fullName>LOCKED_NON_PAYMENT</fullName>
            </value>
            <value>
                <fullName>LOCKED_TRIAL_EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>