unpackaged/main/default/objects/Brightcove_Account__c/fields/Quova_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Quova_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quova Enabled</label>
    <type>Checkbox</type>
</CustomField>