unpackaged/main/default/objects/Brightcove_Account__c/fields/Restriction_Request_By__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Request_By__c</fullName>
    <label>Restriction Request By:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>