unpackaged/main/default/objects/Brightcove_Account__c/fields/Selfserve_Account__c.field-meta.xml
<CustomField>
    <fullName>Selfserve_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selfserve Account</label>
    <type>Checkbox</type>
</CustomField>