unpackaged/main/default/objects/Brightcove_Account__c/fields/Starter_Credit_Card_Edition__c.field-meta.xml
<CustomField>
    <fullName>Starter_Credit_Card_Edition__c</fullName>
    <label>Starter Credit Card Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>