unpackaged/main/default/objects/Brightcove_Account__c/fields/Studio_Server__c.field-meta.xml
<CustomField>
    <fullName>Studio_Server__c</fullName>
    <label>Studio/Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>