unpackaged/main/default/objects/Brightcove_Account__c/fields/Subscription_MRR_Initial__c.field-meta.xml
<CustomField>
    <fullName>Subscription_MRR_Initial__c</fullName>
    <label>Subscription MRR (Initial)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>