unpackaged/main/default/objects/Brightcove_Account__c/fields/Technology_Partner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner_Manager_Email__c</fullName>
    <label>Technology Partner Manager Email</label>
    <type>Email</type>
</CustomField>