unpackaged/main/default/objects/Brightcove_Account__c/fields/Template_Manage__c.field-meta.xml
<CustomField>
    <fullName>Template_Manage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Manage</label>
    <type>Checkbox</type>
</CustomField>