unpackaged/main/default/objects/Brightcove_Account__c/fields/TemplateCount__c.field-meta.xml
<CustomField>
    <fullName>TemplateCount__c</fullName>
    <label>TemplateCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>