unpackaged/main/default/objects/Brightcove_Account__c/fields/Time_Spent_in_Studio_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Studio_Last_Month__c</fullName>
    <label>Time Spent in Studio Last Month</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>