unpackaged/main/default/objects/Brightcove_Account__c/fields/Title_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Title_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Sharing</label>
    <type>Checkbox</type>
</CustomField>