unpackaged/main/default/objects/Brightcove_Account__c/fields/TPM_Expiration_Is_Sent__c.field-meta.xml
<CustomField>
    <fullName>TPM_Expiration_Is_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM Expiration Is Sent</label>
    <type>Checkbox</type>
</CustomField>