unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Alert_Reply__c.field-meta.xml
<CustomField>
    <fullName>Trial_Alert_Reply__c</fullName>
    <label>Trial Alert Reply</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flipped to paid</fullName>
            </value>
            <value>
                <fullName>Extended trial</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>