unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Duration__c.field-meta.xml
<CustomField>
    <fullName>Trial_Duration__c</fullName>
    <label>Trial Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>