unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Expiration_Grace_Period_Complete_T__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Grace_Period_Complete_T__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Expiration Grace Period Complete	T</label>
    <type>Checkbox</type>
</CustomField>