unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Expiration_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Expiration Notification Sent</label>
    <type>Checkbox</type>
</CustomField>