unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Extended_Until__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extended_Until__c</fullName>
    <label>Trial Extended Until</label>
    <type>Date</type>
</CustomField>