unpackaged/main/default/objects/Brightcove_Account__c/fields/Trial_Extension_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extension_Authorized_By__c</fullName>
    <label>Trial Extension Authorized By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>