unpackaged/main/default/objects/Brightcove_Account__c/fields/UnpublishedAppCount__c.field-meta.xml
<CustomField>
    <fullName>UnpublishedAppCount__c</fullName>
    <label>UnpublishedAppCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>