unpackaged/main/default/objects/Brightcove_Account__c/fields/Usage_Limits_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Usage_Limits_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage Limits Exceeded</label>
    <type>Checkbox</type>
</CustomField>