unpackaged/main/default/objects/Brightcove_Account__c/fields/Utility_SWF__c.field-meta.xml
<CustomField>
    <fullName>Utility_SWF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility SWF</label>
    <type>Checkbox</type>
</CustomField>