unpackaged/main/default/objects/Brightcove_Account__c/fields/Valid_Remove_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Valid_Remove_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid - Remove Restrictions</label>
    <type>Checkbox</type>
</CustomField>