unpackaged/main/default/objects/Brightcove_Account__c/fields/Video_Count__c.field-meta.xml
<CustomField>
    <fullName>Video_Count__c</fullName>
    <label>Video Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>