unpackaged/main/default/objects/Brightcove_Account__c/fields/Video_Count_After_Trial__c.field-meta.xml
<CustomField>
    <fullName>Video_Count_After_Trial__c</fullName>
    <label>Video Count After Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>