unpackaged/main/default/objects/Brightcove_Account__c/fields/Video_Scheduling_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Video_Scheduling_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Scheduling Enabled</label>
    <type>Checkbox</type>
</CustomField>