unpackaged/main/default/objects/Brightcove_Account__c/fields/VideoStream__c.field-meta.xml
<CustomField>
    <fullName>VideoStream__c</fullName>
    <label>VideoStream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Progressive Download</fullName>
            </value>
            <value>
                <fullName>Streaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>