unpackaged/main/default/objects/Brightcove_Account__c/fields/Violated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Violated_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Violated Terms</label>
    <type>Checkbox</type>
</CustomField>