unpackaged/main/default/objects/Brightcove_Account__c/fields/White_Label_CGM__c.field-meta.xml
<CustomField>
    <fullName>White_Label_CGM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White Label CGM</label>
    <type>Checkbox</type>
</CustomField>