unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Affiliate_Code__c.field-meta.xml
<CustomField>
    <fullName>ZC_Affiliate_Code__c</fullName>
    <label>ZC Affiliate Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>