unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Cost_Per_Minute__c.field-meta.xml
<CustomField>
    <fullName>ZC_Cost_Per_Minute__c</fullName>
    <label>ZC Cost Per Minute</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>