unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Current_Encoding_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ZC_Current_Encoding_Minutes__c</fullName>
    <label>ZC Current Encoding Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>