unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Date_of_first_live_job__c.field-meta.xml
<CustomField>
    <fullName>ZC_Date_of_first_live_job__c</fullName>
    <label>ZC Date of first live job</label>
    <type>Date</type>
</CustomField>