unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Encoding_minutes__c.field-meta.xml
<CustomField>
    <fullName>ZC_Encoding_minutes__c</fullName>
    <label>ZC Encoding minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>