unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Last_month_billable_live_minutes__c.field-meta.xml
<CustomField>
    <fullName>ZC_Last_month_billable_live_minutes__c</fullName>
    <label>ZC Last month billable live minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>