unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Last_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ZC_Last_Month_Revenue__c</fullName>
    <label>ZC Last Month Revenue</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>