unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Live_Plan__c.field-meta.xml
<CustomField>
    <fullName>ZC_Live_Plan__c</fullName>
    <label>ZC Live Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>