unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Minutes_included__c.field-meta.xml
<CustomField>
    <fullName>ZC_Minutes_included__c</fullName>
    <label>ZC Minutes included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>