unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Monthly_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>ZC_Monthly_Plan_Amount__c</fullName>
    <label>ZC Monthly Plan Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>