unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Plan__c.field-meta.xml
<CustomField>
    <fullName>ZC_Plan__c</fullName>
    <label>ZC Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>