unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Signed_up__c.field-meta.xml
<CustomField>
    <fullName>ZC_Signed_up__c</fullName>
    <label>ZC Signed up</label>
    <type>Date</type>
</CustomField>