unpackaged/main/default/objects/Brightcove_Account__c/fields/ZC_Subscribed_Date__c.field-meta.xml
<CustomField>
    <fullName>ZC_Subscribed_Date__c</fullName>
    <label>ZC Subscribed Date</label>
    <type>Date</type>
</CustomField>