unpackaged/main/default/objects/Brightcove_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brightcove_Account_Id__c</columns>
    <columns>Publisher_Status__c</columns>
    <columns>Account_Edition__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>